# sycl-opencl-benchmark-rk3588

./: .gitignore  CMakeLists.txt  README.md  README_FIX.md  build.bat  build.sh  run.bat
kernels/: resize.cl
scripts/: set_perf_mode.sh
src/: cl_info.cpp  cpu_resize.cpp  cpu_resize.h  image_utils.cpp  image_utils.h  main.cpp  opencl_resize.cpp  opencl_resize.h  sycl_resize.cpp  sycl_resize.h  timer.h
test_images/: README.md
